<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@color/DarkBlue"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="48sp"
        android:textColor="@color/White"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvOnboardingOneText"
        android:textSize="24sp"
        android:textColor="@color/YellowOrange"
        android:gravity="center"
        android:layout_margin="10dp"
        />

    <ImageView
        android:id="@+id/ivAnimationHolder"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvOnboardingOneSwipe"
        android:textColor="@color/LightBLue"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>