<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/YellowOrange"
              android:weightSum="100"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metDefaultDeficit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/metDefaultDeficitHint"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textColor="@color/DarkerBlue"
            app:met_floatingLabel="normal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metDefaultDeficitDescriptionText"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/line_separator"
            android:layerType="software"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical"
        >
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/metDefaultSurplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/metDefaultSurplusHint"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:textColor="@color/DarkerBlue"
            app:met_floatingLabel="normal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metDefaultSurplusDescriptionText"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/line_separator"
            android:layerType="software"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tvUnitsSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/tvUnitsSettingsText"
            android:gravity="center"
            android:textSize="18sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/line_separator"
            android:layerType="software"
            />


        <RadioGroup
            android:id="@+id/rgUnits"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            >

            <RadioButton
                android:id="@+id/rbMetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbMetricText"
                android:textSize="12sp"
                android:textColor="@color/DarkBlue"
                />

            <RadioButton
                android:id="@+id/rbImperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbImperialText"
                android:textSize="12sp"
                android:textColor="@color/DarkBlue"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFinishText"
        android:textSize="24sp"
        android:background="@color/DarkBlue"
        android:textColor="@color/White"
        android:layout_margin="10dp"
        android:layout_weight="5"
        />

</LinearLayout>